--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,6 +5,17 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
+- task: AzureResourceManagerTemplateDeployment@3
+  inputs:
+    deploymentScope: 'Resource Group'
+    ConnectedServiceName: 'Visual Studio Enterprise (011fd5e2-60c9-4a71-8bcd-659a9fbbfd4c)'
+    subscriptionName: '011fd5e2-60c9-4a71-8bcd-659a9fbbfd4c'
+    action: 'Create Or Update Resource Group'
+    resourceGroupName: 'thebus'
+    location: 'West US 2'
+    templateLocation: 'Linked artifact'
+    csmFile: './environment.json'
+    deploymentMode: 'Complete'
 - task: Docker@2
   displayName: Build an image
   inputs:
