--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,7 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
-- task: AzureResourceManagerTemplateDeployment@3
+- task: AzureResourceManagerTemplateDeployment
   inputs:
     deploymentScope: 'Resource Group'
     ConnectedServiceName: 'Visual Studio Enterprise (011fd5e2-60c9-4a71-8bcd-659a9fbbfd4c)'
@@ -16,13 +16,13 @@ steps:
     templateLocation: 'Linked artifact'
     csmFile: './environment.json'
     deploymentMode: 'Validation only'
-- task: Docker@2
+- task: Docker
   displayName: Build an image
   inputs:
     repository: 'jefking/thebus'
     command: build
     Dockerfile: compute/Dockerfile
-- task: AzureResourceManagerTemplateDeployment@4
+- task: AzureResourceManagerTemplateDeployment
   inputs:
     deploymentScope: 'Resource Group'
     ConnectedServiceName: 'Visual Studio Enterprise (011fd5e2-60c9-4a71-8bcd-659a9fbbfd4c)'
